# SA

./: .gitmodules  CMakeLists.txt  Config.cmake.in  Readme.md
include/: SA.h
include_bin/: SA_File.h  _SA_FILE_SIZE.h  _SA_FILE_SIZE.h.in  _SA_File.hpp  _SA_NameGen.hpp  _SA_StrGetPostNum.h
src/: SA.c
src_bin/: NameGen.cpp  StrGetPostNum.cpp  main.cpp
